syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "zetachain/zetacore/observer/confirmation_params.proto";

option go_package = "github.com/zeta-chain/node/x/observer/types";

message ChainParamsList { repeated ChainParams chain_params = 1; }

message ChainParams {
  reserved 1;
  reserved "confirmation_count";

  int64 chain_id = 11;
  uint64 gas_price_ticker = 2;
  uint64 inbound_ticker = 3;
  uint64 outbound_ticker = 4;
  uint64 watch_utxo_ticker = 5;
  string zeta_token_contract_address = 8;
  string connector_contract_address = 9;
  string erc20_custody_contract_address = 10;
  int64 outbound_schedule_interval = 12;
  int64 outbound_schedule_lookahead = 13;
  string ballot_threshold = 14 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string min_observer_delegation = 15 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  bool is_supported = 16;
  string gateway_address = 17;

  // Advanced confirmation parameters for chain to support fast observation
  ConfirmationParams confirmation_params = 18;

  // Skip actions that require scanning the contents of each block.
  // The main thing this disables is transfers directly to the TSS address.
  bool disable_tss_block_scan = 19;

  // Percentage of unused tokens for outbounds that are are sent to the
  // stability pool. The value should be between 0 and 100.
  uint64 stability_pool_percentage = 20;
}
